--- a/osa4/package.json
+++ b/osa4/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Jaakko Nurminen",
   "license": "MIT",
@@ -17,6 +18,11 @@
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
