--- a/osa4/package.json
+++ b/osa4/package.json
@@ -5,18 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node index.js",
-    "dev": "NODE_ENV=development node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
     "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Jaakko Nurminen",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^8.1.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.3",
+    "mongoose-unique-validator": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
